feature(AI): add AIService for LLMs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,8 @@ msegat.api.key=YOUR_API_KEY
 jwt.secret=YourSecretKeyHereMakeItLongAndComplexForBetterSecurity
 jwt.expiration=86400000
 jwt.refresh.expiration=604800000
+
+# AI Configuration
+spring.ai.openai.api-key=API_KEY
+spring.ai.openai.base-url=https://api.groq.com/openai
+spring.ai.openai.chat.options.model=llama3-70b-8192
