refactor: SMS service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,9 +40,9 @@ management.endpoint.health.show-components=always
 management.endpoints.web.base-path=/api/v1/admin/actuator
 
 # Msegat SMS Configuration
-msegat.api.url=https://api.msegat.com
 msegat.username=YOUR_USERNAME
 msegat.sender.id=YOUR_SENDER_ID
+msegat.sender.ad.id=YOUR_SENDER_AD_ID
 msegat.api.key=YOUR_API_KEY
 
 # JWT Configuration
