update: README.md & application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring-boot-starter
+server.port=${PORT:8080}
 
 # JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=create
