--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,14 @@
 		</dependency>
 		<!-- End AWS -->
 
+		<!-- Swagger/OpenAPI -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<!-- End Swagger/OpenAPI -->
+
 	</dependencies>
 	<build>
 		<plugins>
