--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=${PORT:8080}
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
 
 # H2 Database Configuration (default for development)
 spring.datasource.url=jdbc:h2:mem:starter
